# libv4l2cpp-leopard

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: V4l2Access.h  V4l2Capture.h  V4l2Device.h
src/: V4l2Device.cpp
